public/css/style.css
body{
  font-family: "Plus Jakarta Sams", sans-serif !important;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
.container{
  flex: 1;
}
/*header*/
.navbar{
  height: 5rem;
  background-color: white;
}
.fa-compass{
  color: rgb(197, 55, 55);
  font-size: 2rem;
}
.nav-link{
  color: #222222 !important;
}
/*footer*/
.f-info-links a{
  text-decoration: none;
  color: #222222;
}
.f-info-links a:hover{
  text-decoration: underline !important;
}
.f-info-socials a{
  text-decoration: none;
  color: #222222;
}
.f-info-socials a:hover{
  color: #000;
}
.f-info-links,
.f-info-socials,
.f-info-brand{
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.f-info-socials i{
  font-size: 1.3rem !important;
  margin-right: 1rem !important;
}
.f-info{
  text-align: center;
  height: 5.5rem;
  background-color: #ebebeb;
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: space-evenly;
}
/*cards*/
.listing-card{
  border: none !important;
  margin-bottom: 2rem;
}
.card-img-top{
  border-radius: 1rem !important;
  width: 100% !important;
  object-fit: cover !important;
}
.card-body{
  padding: 0 !important;
}
.card-text p{
  font-weight: 400 !important;
}

.listing-link{
  text-decoration: none !important;
  color: #000;
}
/*card effect*/
.card-img-overlay{
  opacity: 0;
}
.card-img-overlay:hover{
  opacity: 0.2;
  background-color: white;
}
/*new page*/
.add-btn{
  background-color: #fe424d !important;
  border: none !important;
}
/*edit page */
.edit-btn{
  background-color: #fe424d !important;
  border: none !important;
}
/*show page*/
.show-img{
  height: 60vh;
}
.btns{
  display: flex;
}
.show-card{
  padding-left: 0;
  padding-right: 0;
}
.down{
  display:block;
  
  width:fit-content;
  border:1px solid rgb(16, 16, 16);
  padding:14px 40px;
  border-radius: 9px;
  text-decoration: none;
  color: #fff;
  background-color: rgb(21, 21, 21);
  transition: background-color 0.5s;
}
.down:hover{
  color: #ebebeb;
}
.star{
  color: orange;
}

